# pytake

./: .copilot-instructions  .dockerignore  .env.development  .env.docker  .env.example  .env.flow-engine  .gitignore  .gitmessage  ACESSO_LOCAL.md  ADMIN_DESIGN_SYSTEM.md  ADMIN_ROADMAP.md  AGENT_RESTRICTIONS_COMPLETE.md  AGENT_SETUP.md  AI_FLOW_ASSISTANT.md  AI_FLOW_ASSISTANT_SPEC.md  ANALISE_ESTRUTURA_FRONTEND.json  ANALISE_ESTRUTURA_FRONTEND.md  ANALISE_RESUMO.json  ANALISE_SISTEMA_COMPLETA.md  ANALISE_SISTEMA_EMAIL_NOTIFICACOES.md  ANALYSIS_FINAL.md  ANTI_CRASH_FIXES.md  API_COVERAGE_ANALYSIS.md  API_DOCUMENTATION.md  API_ROUTES_COMPLETE.md  ARCHITECTURE.md  AUTH_SESSION_FIX.md  BUILDER_IMPLEMENTATION_COMPLETE.md  BUILDER_IMPLEMENTATION_GUIDE.md  BUILDER_IMPROVEMENTS_PROPOSAL.md  BUILDER_NODES_SPECIFICATION.md  BUILDER_STATUS_FINDINGS.md  BUILDER_UI_MOCKUPS.md  BUILDFIX.md  CHANGELOG.md  CHATBOT_BUILDER.md  CHATBOT_BUILDER_COMPLETE.md  CHATBOT_BUILDER_NODES_AUDIT.md  CHATBOT_BUILDER_REDESIGN.md  CHATBOT_FLOW_ENGINE_ANALYSIS.md  (+224 more)
backend/: .coverage  .env.ai.example  .env.docker  .env.example  .rustfmt.toml  API-REFERENCE.md  API.md  Cargo.toml  Dockerfile  INTEGRATION_EXAMPLES.md  MONGODB_GUIDE.md  PHASE_11_12_COMPLETE.md  PHASE_11_12_SERVICES.md  PROJETO_COMPLETO.md  README.md  SERVICES_API_DOCS.md  SERVICES_EXAMPLES.md  SWAGGER_STATUS.txt  SWAGGER_TEMPLATE.py  SWAGGER_UPDATE_GUIDE.md  alembic.ini  celerybeat-schedule  create_admin.py  create_admin_custom.py  delete_test_conv.py  entrypoint.sh  fix_user_roles.sql  logging_config.yml  manage.py  pytest.ini  quick_check.py  requirements-dev.txt  requirements.txt  seed.py  simple_server.rs  simple_server_Cargo.toml  sync_flow_nodes.py  sync_nodes.py  test_auth.sh  test_flow_webhook.py  (+3 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_add_template_parameter_format.py  001_add_webhook_token_isolation.py  002_add_template_status_tracking.py  003_add_conversation_window_tracking.py  004_add_conversation_window_24h.py  006_phase_2_1_allow_category_change.py  007_phase_2_3_versioning.py  015_create_expenses_tables.py  069b858ab150_add_parameter_format_and_named_.py  17f149e4f603_feat_adicionar_default_flow_id_em_.py  20250125_2011_mfa_tables.py  20251003_1534_0153cb050e63_initial_migration.py  20251006_1838_0e34256e66c6_add_evolution_api_support.py  20251009_2357_ff4cba69ebb1_add_app_secret_to_whatsapp_numbers.py  20251020_1952_3f9622b72418_add_queues_table.py  20251021_1503_60aed40af817_add_queue_overflow_settings.py  20251021_1705_7a2c1b8a9a3f_add_agent_skills_table.py  20251021_2000_add_is_vip_contacts.py  20251211_001_flow_multi_binding.py  20251212_001_fix_duplicate_chatbot_number_links.py  20251214_001_add_alerts_table.py  20251214_conversation_windows.py  20260125_1921_sso_oauth_tables.py  4d00f6511842_enhance_soft_delete_mixin_add_audit_.py  69e9a6ebbd2e_add_mfa_and_passkey_tables.py  7ecd873a7f44_add_audit_logs_table.py  8711ddbf29a4_add_ai_analysis_to_templates.py  9f8e3d7c2b1a_add_conversation_states_and_conversation_logs_tables.py  b28b8e76f20a_add_social_identities_table.py  ba3dfadb685d_adicionar_status_e_connected_at_ao_.py  c5a7f2f4cdae_add_unique_constraint_contacts_.py  ea84a37207e1_add_suggested_category_to_templates.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  database.py  error_handling.py  jwt_session_usage.py  mongodb.py  openapi_schema.py  rate_limiter.py  rbac_init.py  rbac_seed.py  security.py  swagger_examples.py  token_refresh_example.py  websocket_manager.py  whatsapp_rate_limit.py
backend/app/data/: __init__.py  ai_models.py
backend/app/graphql/: context.py  permissions.py  schema.py
backend/app/integrations/: email.py  evolution_api.py  meta_api.py
backend/app/models/: __init__.py  agent_skill.py  alert.py  alert_notification.py  audit_log.py  base.py  campaign.py  chatbot.py  contact.py  conversation.py  conversation_log.py  department.py  expense.py  flow_automation.py  mfa.py  notification.py  oauth_sso.py  organization.py  queue.py  role.py  secret.py  user.py  (+1 more)
backend/migrations/: 001_initial_schema.sql  20240115_create_contacts_table.sql  20240115_create_conversation_tags_table.sql  20240115_create_conversations_table.sql  20240115_create_message_media_table.sql  20240115_create_messages_table.sql  20240115_create_quick_replies_table.sql  20250807_create_whatsapp_configs.sql
backend/pytake/: __init__.py  asgi.py  asgi_routing.py  celery.py  celery_beat.py  urls.py  wsgi.py
backend/requirements/: base.txt  development.txt  production.txt
backend/scripts/: check_swagger_docs.py  create_admin.py  create_admin.sql  create_admin_http.py  init_rbac_system.py
backend/simple_api/: .env.google.example  AI_ASSISTANT_README.md  CAMPAIGN_SYSTEM.md  Cargo.toml  GOOGLE_INTEGRATIONS.md  LANGCHAIN_AI_SYSTEM.md  MULTI_TENANT_README.md  PRIVACY_COMPLIANCE_GUIDE.md  README.md  WEBHOOK_IMPLEMENTATION_SUMMARY.md  WEBHOOK_SYSTEM.md  test_langchain.sh
backend/tests/: __init__.py  backend_integration_test.rs  conftest.py  test_advanced_auth_integration.py  test_advanced_auth_security.py  test_alert_dashboard.py  test_alert_endpoints.py  test_alert_realtime.py  test_alert_service.py  test_analytics_service.py  test_auth_service.py  test_campaign_service.py  test_chatbot_service.py  test_contact_service.py  test_contact_unique_constraint.py  test_conversation_service.py  test_conversation_windows_endpoints.py  test_department_service.py  test_email_notification.py  test_flow_automation_service.py  test_logging_system.py  test_node_executor.py  test_notification_repository.py  test_notification_service.py  test_oidc_service.py  test_organization_service.py  test_passkey.py  test_phase_1_2_integration.py  test_phase_1_2_unit.py  test_phase_1_3_integration_complete.py  test_phase_1_3_unit.py  test_phase_1_3_webhook_integration.py  test_phase_2_2_health_service.py  test_phase_3_1_cost_estimator.py  test_phase_3_3_expense_tracking.py  test_queue_service.py  test_saml_service.py  test_secret_service.py  test_social_login.py  test_soft_delete_migration.py  (+4 more)
(+2086 files in other folders)
