[workspace]
members = [
    "crates/pytake-core",
    "crates/pytake-api",
    "crates/pytake-db",
    "crates/pytake-flow",
    "crates/pytake-whatsapp",
    "crates/pytake-modules",
]

[workspace.dependencies]
# Web Framework
actix-web = "4.5"
actix-ws = "0.2"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sea-orm = { version = "0.12", features = ["postgres", "runtime-tokio-native-tls"] }
redis = { version = "0.25", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Testing
mockall = "0.12"