[package]
name = "simple_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_api"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
bytes = "1.0"
jsonwebtoken = "9.2"
sea-orm = { workspace = true }
dotenvy = { workspace = true }
log = "0.4"
actix-ws = { workspace = true }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
regex = "1.10"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
backoff = { version = "0.4", features = ["tokio"] }
dashmap = "5.5"
leaky-bucket = "1.0"
cached = "0.46"
redis = { version = "0.24", features = ["tokio-comp"] }
async-trait = "0.1"
actix-governor = "0.5"
governor = "0.6"
nonzero_ext = "0.3"
tiktoken-rs = "0.5"
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
utoipa-redoc = { version = "3", features = ["actix-web"] }
utoipa-rapidoc = { version = "3", features = ["actix-web"] }
serde_yaml = "0.9"
actix-web-httpauth = "0.8"
tokio-stream = "0.1"
futures = "0.3"
pdf-extract = "0.7"
docx-rs = "0.4"
encoding_rs = "0.8"
mime = "0.3"
walkdir = "2.4"
actix = "0.13"
actix-web-actors = "4.3"
bitflags = "2.4"
urlencoding = "2.1"
async-graphql = { version = "7.0", features = ["dataloader", "playground", "opentelemetry", "chrono"] }
async-graphql-actix-web = "7.0"
dataloader = "0.17"
async-stream = "0.3"

# OpenTelemetry dependencies
opentelemetry = { version = "0.21" }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.2" }
tracing-opentelemetry = "0.22"

# Prometheus metrics
prometheus = "0.13"

[dev-dependencies]
actix-http = "3"
# Testing framework dependencies
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.23"
serial_test = "3.0"
pretty_assertions = "1.4"
rstest = "0.18"
tempfile = "3.8"
# Test coverage
# tarpaulin = "0.27" # Only needed as a CLI tool, not as dependency
# Database testing
sea-orm = { workspace = true, features = ["mock"] }
# Redis testing for mocking
redis-test = "0.4"
# HTTP client testing
reqwest = { version = "0.11", features = ["json"] }
# JSON assertions
serde_json = "1.0"
# UUID for test data generation
uuid = { version = "1.0", features = ["v4", "serde"] }
