[package]
name = "pytake-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic and domain entities for PyTake"
authors = ["PyTake Team"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Validation
validator = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Async runtime (for async traits and utilities)
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = "0.1"

# WebSocket support
actix = "0.13"
actix-web = { workspace = true }
actix-web-actors = "4.3"

# Authentication dependencies
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
zeroize = "1.7"

# Redis for queue system
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }

# Random for testing
rand = "0.8"

# Regex for template processing
regex = "1.10"

# SHA2 for media hashing
sha2 = "0.10"

# Database integration (for processor)
sea-orm = { workspace = true }
# pytake-db = { path = "../pytake-db" }  # Temporarily removed to fix compilation
pytake-whatsapp = { path = "../pytake-whatsapp" }

[dev-dependencies]
# Testing utilities
mockall = { workspace = true }
tokio-test = "0.4"